--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,7 @@
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-speech-kit": "^3.0.1"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
