--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "@google-cloud/speech": "^7.1.0",
     "@google-cloud/text-to-speech": "^6.1.0",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "multer": "^2.0.1",
     "node-fetch": "^3.3.2"
   }
 }
